--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link  rel="stylesheet" href="style.css"/>
     <title>Tic-Tac-Toe</title>
     
@@ -11,23 +12,24 @@
 <body>
     <div id="container">
         <div>
-            <h1>Let's Play tic-tac-toe</h1>
-            <p id="turn"></p>
+            <h1 class="font-bold text-lg">Let's Play tic-tac-toe</h1>
+            <p id="turn" class="text-md tex-shadow"></p>
         </div>
-        <table>
-            <tr>
-                <td id="b1" onclick="add(this)"></td>
-                <td id="b2" onclick="add(this)"></td>
-                <td id="b3" onclick="add(this)"></td>
+        <table class="border border-2 shadow-lg rounded-md">
+            <tr class="border border-2">
+                <td class="border border-2" id="b1" onclick="add(this)"></td>
+                <td class="border border-2" id="b2" onclick="add(this)"></td>
+                <td class="border border-2" id="b3" onclick="add(this)"></td>
             </tr>
-            <tr>
-                <td id="b4" onclick="add(this)"></td>
-                <td id="b5" onclick="add(this)"></td>
-                <td id="b6" onclick="add(this)"></td>
-            </tr><tr>
-                <td id="b7" onclick="add(this)"></td>
-                <td id="b8" onclick="add(this)"></td>
-                <td id="b9" onclick="add(this)"></td>
+            <tr class="border border-2">
+                <td class="border border-2" id="b4" onclick="add(this)"></td>
+                <td class="border border-2" id="b5" onclick="add(this)"></td>
+                <td class="border border-2" id="b6" onclick="add(this)"></td>
+            </tr>
+            <tr class="border border-2">
+                <td class="border border-2" id="b7" onclick="add(this)"></td>
+                <td class="border border-2" id="b8" onclick="add(this)"></td>
+                <td class="border border-2" id="b9" onclick="add(this)"></td>
             </tr>
         </table>
         <div>
